--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "KartikKala",
   "license": "ISC",
   "dependencies": {
+    "aria2": "^4.1.2",
     "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
     "pug": "^3.0.2",
-    "stream-throttle": "^0.1.3"
+    "stream-throttle": "^0.1.3",
+    "ws": "^8.13.0"
   }
 }
