--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mfp",
   "version": "1.0.0",
+  "type": "module",
   "description": "This is the first package I am creating using npm init and express js",
   "main": "app.js",
   "scripts": {
