Added stop server functionality to stop the server after tests
- Added a stopServer function that will be called by hooks after tests are completed
- Server will be started on port 8000 for test server and 80 for deployment server

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "This is the first package I am creating using npm init and express js",
   "main": "app.js",
   "scripts": {
-    "test": "mocha 'test/*.spec.js'"
+    "start": "NODE_ENV=deployment sudo node app.js",
+    "test": "NODE_ENV=test mocha 'test/*.spec.js'"
   },
   "author": "KartikKala",
   "license": "ISC",
