--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
   "description": "This is the first package I am creating using npm init and express js",
   "main": "app.js",
   "scripts": {
-    "start": "NODE_ENV=deployment sudo node app.js",
-    "test": "JUNIT_REPORT_PATH=/report.xml NODE_ENV=test mocha --colors --reporter mocha-jenkins-reporter 'test/*.spec.js'"
+    "start": "NODE_ENV=deployment MONGO_CONNECTION_STRING=$MONGO_CONNECTION_STRING sudo node app.js",
+    "test": ". /etc/environment && JUNIT_REPORT_PATH=/report.xml NODE_ENV=test MONGO_CONNECTION_STRING=$MONGO_CONNECTION_STRING mocha --exit --colors --reporter mocha-jenkins-reporter 'test/*.spec.js'"
   },
   "author": "KartikKala",
   "license": "ISC",
   "dependencies": {
     "aria2": "^4.1.2",
+    "bcrypt": "^5.1.1",
+    "connect-mongo": "^5.0.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mocha-jenkins-reporter": "^0.4.8",
+    "mongodb": "^5.1.0",
     "node-fetch": "^3.3.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pug": "^3.0.2",
     "stream-throttle": "^0.1.3",
     "ws": "^8.13.0"
