Application now uses configs for getting root directory path for each subsequent user directories

--- a/configs/app_config.json
+++ b/configs/app_config.json
@@ -24,5 +24,9 @@
             "secure" : false,
             "expire_time_ms" : 86400000
         }
+    },
+    "fileManagerConfigs":
+    {
+        "rootPath" : "../downloadables"
     }
 }
