Corrected file manager rootpath in app_config

--- a/configs/app_config.json
+++ b/configs/app_config.json
@@ -27,6 +27,6 @@
     },
     "fileManagerConfigs":
     {
-        "rootPath" : "../downloadables"
+        "rootPath" : "./downloadables"
     }
 }
