--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
     "mocha-jenkins-reporter": "^0.4.8",
     "mongodb": "^5.1.0",
     "node-fetch": "^3.3.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pug": "^3.0.2",
+    "socket.io": "^4.7.4",
     "stream-throttle": "^0.1.3",
     "ws": "^8.13.0"
   },
