refactor: Divided utitity.mjs in lib to multiple smaller modules for beter coupling

--- a/configs/app_config.json
+++ b/configs/app_config.json
@@ -15,7 +15,8 @@
         "user_auth_db_name" : "personal_drive",
         "user_auth_db_collection_name" : "users",
         "user_inactive_downloads_collection_name" : "inactive_downloads",
-        "connection_timeout_ms" : 15000
+        "connection_timeout_ms" : 15000,
+        "number_of_salt_rounds" : 12
     },
     "session_configs":
     {
