Switched to mongoose instead of directly using mongodb

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mocha-jenkins-reporter": "^0.4.8",
     "mongodb": "^5.1.0",
+    "mongoose": "^8.2.0",
     "node-fetch": "^3.3.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
