--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-fetch": "^3.3.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "password-validator": "^5.3.0",
     "pug": "^3.0.2",
     "socket.io": "^4.7.4",
     "stream-throttle": "^0.1.3",
