--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "fast-folder-size": "^2.2.0",
     "jsonwebtoken": "^9.0.2",
     "mocha-jenkins-reporter": "^0.4.8",
     "mongodb": "^5.1.0",
@@ -28,6 +29,7 @@
     "pug": "^3.0.2",
     "socket.io": "^4.7.4",
     "stream-throttle": "^0.1.3",
+    "url-file-size": "^1.0.5-1",
     "ws": "^8.13.0"
   },
   "devDependencies": {
