--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aria2": "^4.1.2",
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.0.0",
+    "diskusage": "^1.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
