Changed fileManager service to create file objects for each individual user

--- a/configs/app_config.json
+++ b/configs/app_config.json
@@ -31,7 +31,8 @@
     },
     "app_configs":
     {
-        "rootPath" : "./downloadables"
+        "mountPaths" : ["./downloadables"],
+        "workingDir" : "CloudDrive"
     },
     "keys_configuration":
     {
