--- a/package.json
+++ b/package.json
@@ -34,8 +34,13 @@
     "ws": "^8.13.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/passport-local": "^1.0.38",
     "chai": "^4.3.7",
     "chai-http": "^4.4.0",
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "typescript": "^5.4.5"
   }
 }
