--- a/package.json
+++ b/package.json
@@ -11,8 +11,17 @@
   "author": "KartikKala",
   "license": "ISC",
   "dependencies": {
+    "@ctrl/torrent-file": "^4.0.0",
+    "@types/busboy": "^1.5.4",
+    "@types/node": "^20.12.7",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/stream-throttle": "^0.1.4",
+    "@types/url-file-size": "^1.0.3",
+    "@types/webtorrent": "^0.109.8",
+    "@types/ws": "^8.5.10",
     "aria2": "^4.1.2",
     "bcrypt": "^5.1.1",
+    "busboy": "^1.6.0",
     "connect-mongo": "^5.0.0",
     "diskusage": "^1.2.0",
     "dotenv": "^16.3.1",
@@ -20,22 +29,27 @@
     "express-session": "^1.17.3",
     "fast-folder-size": "^2.2.0",
     "jsonwebtoken": "^9.0.2",
+    "libaria2": "^1.0.95",
+    "maria2": "^0.3.3",
     "mocha-jenkins-reporter": "^0.4.8",
     "mongodb": "^5.1.0",
     "mongoose": "^8.2.0",
     "node-fetch": "^3.3.2",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "password-validator": "^5.3.0",
     "pug": "^3.0.2",
     "socket.io": "^4.7.4",
     "stream-throttle": "^0.1.3",
     "url-file-size": "^1.0.5-1",
+    "webtorrent": "^2.2.1",
     "ws": "^8.13.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/passport-local": "^1.0.38",
     "chai": "^4.3.7",
