Implemented Dependency Injection in routes and in lib classes for configs

--- a/configs/app_config.json
+++ b/configs/app_config.json
@@ -3,10 +3,7 @@
     {
         "host" : "localhost",
         "port": 6800,
-        "secure" : false,
-        "secret" : "",
         "path": "/jsonrpc",
-        "downloads_dir" : "Aria2_Downloads",
         "downloadStatusUpdateDurationInSeconds" : 3
     },
     "db_configs":
@@ -15,8 +12,7 @@
         "user_auth_db_collection_name" : "users",
         "user_inactive_downloads_collection_name" : "inactive_downloads",
         "connection_timeout_ms" : 5000,
-        "number_of_salt_rounds" : 12,
-        "admin_storage_space" : 32212254720
+        "number_of_salt_rounds" : 12
     },
     "app_configs":
     {
