Added OTP verification via e-mail for new user registration

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ctrl/torrent-file": "^4.0.0",
     "@types/busboy": "^1.5.4",
     "@types/node": "^20.12.7",
+    "@types/nodemailer": "^6.4.15",
     "@types/passport-jwt": "^4.0.1",
     "@types/stream-throttle": "^0.1.4",
     "@types/url-file-size": "^1.0.3",
@@ -35,6 +36,7 @@
     "mongodb": "^5.1.0",
     "mongoose": "^8.2.0",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.13",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
