--- a/configs/app_config.json
+++ b/configs/app_config.json
@@ -17,7 +17,11 @@
     "app_configs":
     {
         "mountPaths" : ["./downloadables"],
-        "workingDir" : "CloudDrive"
+        "workingDir" : "CloudDrive",
+        "emailServiceName" : "gmail",
+        "emailServiceHostAddress" : "smtp.gmail.com",
+        "emailServicePort" : 587,
+        "emailServiceSSLEnable" : false
     },
     "keys_configuration":
     {
