--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "connect-mongo": "^5.0.0",
     "diskusage": "^1.2.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "express": ">=4.19.2",
     "express-session": "^1.17.3",
     "fast-folder-size": "^2.2.0",
     "jsonwebtoken": "^9.0.2",
