--- a/tsconfig.json
+++ b/tsconfig.json
@@ -105,5 +105,14 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "static",
+    "test",
+    "out",
+    "routes/userManagementRoutes.mjs",
+    "lib/userManagement",
+    "lib/SubscriptionManagement"
+  ]
 }
