Added CORS support to socket.io and ffmpeg support

--- a/configs/app_config.json
+++ b/configs/app_config.json
@@ -16,7 +16,7 @@
     },
     "app_configs":
     {
-        "mountPaths" : ["./downloadables"],
+        "mountPaths" : ["/home/sirkartik/Downloads/cloud"],
         "workingDir" : "CloudDrive",
         "emailServiceName" : "gmail",
         "emailServiceHostAddress" : "smtp.gmail.com",
