--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@ctrl/torrent-file": "^4.0.0",
     "@types/busboy": "^1.5.4",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/node": "^20.12.7",
     "@types/nodemailer": "^6.4.15",
     "@types/passport-jwt": "^4.0.1",
@@ -24,11 +25,13 @@
     "bcrypt": "^5.1.1",
     "busboy": "^1.6.0",
     "connect-mongo": "^5.0.0",
+    "cors": "^2.8.5",
     "diskusage": "^1.2.0",
     "dotenv": "^16.3.1",
     "express": ">=4.19.2",
     "express-session": "^1.17.3",
     "fast-folder-size": "^2.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
     "libaria2": "^1.0.95",
     "maria2": "^0.3.3",
@@ -37,6 +40,7 @@
     "mongoose": "^8.2.0",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.13",
+    "nodemon": "^3.1.9",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
